# ChangeLog for dev-java/browserlauncher2
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/browserlauncher2/ChangeLog,v 1.5 2007/10/30 00:49:55 betelgeuse Exp $

*browserlauncher2-1.3 (30 Oct 2007)

  30 Oct 2007; Petteri Räty <betelgeuse@gentoo.org>
  +browserlauncher2-1.3.ebuild:
  Version bump.

  07 Apr 2007; Joseph Jezak <josejx@gentoo.org> browserlauncher2-1.0.ebuild:
  Marked ~ppc for bug #170506, thanks to ndansmith for testing.

  15 Mar 2007; Markus Rothe <corsair@gentoo.org>
  browserlauncher2-1.0.ebuild:
  Stable on ppc64; bug #170506

  11 Mar 2007; Stefan Briesenick <sbriesen@gentoo.org>
  browserlauncher2-1.0.ebuild:
  ant_src_unpack -> src_unpack

*browserlauncher2-1.0 (11 Mar 2007)

  11 Mar 2007; Stefan Briesenick <sbriesen@gentoo.org> +metadata.xml,
  +browserlauncher2-1.0.ebuild:
  initial commit.
