@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/browserlauncher2
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/browserlauncher2/ChangeLog,v 1.5 2007/10/30 00:49:55 betelgeuse Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/browserlauncher2/ChangeLog,v 1.6 2008/02/16 13:24:51 opfer Exp $
+
+  16 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
+  browserlauncher2-1.3.ebuild:
+  stable x86, bug 208138
 
 *browserlauncher2-1.3 (30 Oct 2007)
 
